--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.29"
+    "dotenv": "^16.4.5",
+    "v-mask": "^2.3.0",
+    "vue": "^3.4.29",
+    "vue-the-mask": "^0.11.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
+    "sass": "^1.77.8",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1"
   }
